feat: add Curation sets & Synonym API (#69)
* fetch & codegen

* feat: curation API

* code gen

* feat: synonym API
